Fix spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,10 @@ body{
  font-family: 'Nunito',sans-serif;
  /*color: #fff;*/ 
  line-height: 1.5;
+ margin: 0;
 }
 
- .wrapper{
+ .wrapper {
     max-width: 1200px;
     margin: 0 auto;
 }
@@ -18,18 +19,23 @@ body{
  color: #DEC9E9;
 }
 
- #intro
- #fan-fav
+ #intro,
+ #fan-fav,
  #team{
  padding: 4em 0;
+}
 
+#intro,
+#team {
+    color: #fff;
 }
 
 #header{
     background-color: black;
+    color: #DEC9E9;
 }
 
-#header >div {
+#header > div {
  display: flex;
  justify-content: space-between;
  align-items: center;
@@ -45,14 +51,14 @@ nav ul li{
     padding-left: 1.125em;
 }
 
-nav ul li a:link
-nav ul li a:visited{
+nav ul li a:link,
+nav ul li a:visited {
     text-decoration:none;
-    color: #DEC9E9 
+    color: #DEC9E9;
 
 }
 
-nav ul li a:hover
+nav ul li a:hover,
 nav ul li a:focus{
     color:#fff;
 }
@@ -112,7 +118,8 @@ justify-content: center;
 .team-grid{
  display: grid;
  grid-template-columns: 1fr 1fr;
- gap: 1em
+ gap: 1em;
+ margin-top: 2.5rem;
 
 }
 
@@ -146,5 +153,6 @@ margin-bottom: 0;
 footer {
     background-color: #000;
     text-align: center;
+    color: #fff;
     padding: 1em 0;
 }
